k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argodemo-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: argodemo-web
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "64Mi"
              cpu: "200m"
